Fix scrollbar

--- a/web/static/main.css
+++ b/web/static/main.css
@@ -21,6 +21,7 @@ input {
 	bottom: 0;
 	width: 20%;
 	border-right: 1px solid #ccc;
+	overflow-y: hidden;
 }
 
 #stock-list {
